[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/swordandgun/CowboyExtra.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/foresight_tp.png" type="Texture" id=4]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/foresight_explode.png" type="Texture" id=5]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/milk.png" type="Texture" id=6]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/foresight.png" type="Texture" id=7]

[node name="PlayerExtra" instance=ExtResource( 1 )]
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 66.0
margin_bottom = 360.0
alignment = 1

[node name="ShootButton" type="CheckButton" parent="VBoxContainer" index="0"]
unique_name_in_owner = true
margin_top = 138.0
margin_right = 66.0
margin_bottom = 150.0
size_flags_vertical = 0
text = "Draw"

[node name="TpButton" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 151.0
margin_right = 66.0
margin_bottom = 168.0
hint_tooltip = "Teleport to your Foresight after-image."
size_flags_vertical = 0
text = "Shift"
icon = ExtResource( 4 )

[node name="DetonateButton" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 169.0
margin_right = 66.0
margin_bottom = 186.0
hint_tooltip = "Explode your Foresight after-image."
size_flags_vertical = 0
text = "Rift"
icon = ExtResource( 5 )

[node name="MilkButton" type="CheckButton" parent="VBoxContainer" index="3"]
unique_name_in_owner = true
margin_top = 187.0
margin_right = 66.0
margin_bottom = 204.0
hint_tooltip = "Use grounded moves in the air, and aerial moves on the ground. 
Must have placed the Foresight after-image in the air (if you are grounded)
or on the ground (if you are airborne)."
input_pass_on_modal_close_click = false
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.498039, 0.270588, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
text = "Drift"
icon = ExtResource( 6 )

[node name="SightButton" type="CheckButton" parent="VBoxContainer" index="4"]
unique_name_in_owner = true
margin_top = 205.0
margin_right = 66.0
margin_bottom = 222.0
hint_tooltip = "Place a Foresight after-image where you are."
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.498039, 0.270588, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
text = "Sight"
icon = ExtResource( 7 )

[connection signal="toggled" from="VBoxContainer/TpButton" to="." method="_on_TpButton_toggled"]
[connection signal="toggled" from="VBoxContainer/DetonateButton" to="." method="_on_DetonateButton_toggled"]
[connection signal="toggled" from="VBoxContainer/MilkButton" to="." method="_on_MilkButton_toggled"]
[connection signal="toggled" from="VBoxContainer/SightButton" to="." method="_on_MilkButton_toggled"]
